tests/auto/corelib/tools/qarraydata_strictiterators/qarraydata_strictiterators.pro
@@ -1,0 +1,3 @@
+include(../qarraydata/qarraydata.pro)
+TARGET = tst_qarraydata_strictiterators
+DEFINES += QT_STRICT_ITERATORS=1 tst_QArrayData=tst_QArrayData_StrictIterators
