tests/auto/corelib/tools/qmap/qmap.pro
@@ -1,5 +1,5 @@
 CONFIG += testcase parallel_test
 TARGET = tst_qmap
 QT = core testlib
-SOURCES = tst_qmap.cpp
+SOURCES = $$PWD/tst_qmap.cpp
 DEFINES += QT_DISABLE_DEPRECATED_BEFORE=0
