tests/auto/corelib/tools/qmap_strictiterators/qmap_strictiterators.pro
@@ -1,0 +1,3 @@
+include(../qmap/qmap.pro)
+TARGET = tst_qmap_strictiterators
+DEFINES += QT_STRICT_ITERATORS tst_QMap=tst_QMap_StrictIterators
