tests/auto/corelib/tools/qvector/qvector.pro
@@ -1,5 +1,5 @@
 CONFIG += testcase parallel_test
 TARGET = tst_qvector
 QT = core testlib
-SOURCES = tst_qvector.cpp
+SOURCES = $$PWD/tst_qvector.cpp
 DEFINES += QT_DISABLE_DEPRECATED_BEFORE=0
