tests/auto/corelib/tools/qvector_strictiterators/qvector_strictiterators.pro
@@ -1,0 +1,3 @@
+include(../qvector/qvector.pro)
+TARGET = tst_qvector_strictiterators
+DEFINES += QT_STRICT_ITERATORS=1 tst_QVector=tst_QVector_StrictIterators
